--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -115,8 +115,7 @@
 </body>
 </script>
 <!-- apexcharts -->
-<script
-		src="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.min.js"
+<script src="https://cdn.jsdelivr.net/npm/apexcharts@3.37.1/dist/apexcharts.min.js"
 		integrity="sha256-+vh8GkaU7C9/wbSLIcwq82tQ2wTf44aOHA8HlBMwRI8="
 		crossorigin="anonymous"
 ></script>
