--- a/src/main/resources/templates/cliente/listaCliente.html
+++ b/src/main/resources/templates/cliente/listaCliente.html
@@ -122,26 +122,26 @@
 													<th:block
 														th:if="${clientes.estado == T(org.wispcrm.modelo.EstadoCliente).ACTIVO}">
 														<a th:href="@{/vercliente(id=${clientes.id})}" class="btn btn-info btn-rounded btn-icon 
-														data-toggle=" tooltip" data-placement="center" title="Detalle cliente"">
+														data-toggle=" title="Detalle cliente">
 														<em class=" fas fa-eye"></em></a>
 													</th:block>
 
 													<th:block
 														th:if="${clientes.estado == T(org.wispcrm.modelo.EstadoCliente).ACTIVO}">
 														<a th:href="@{'facturar/' + ${clientes.id}}" class="btn btn-success btn-rounded btn-icon  
-														data-toggle=" tooltip" data-placement="center" title="Facturar"">
+														data-toggle=" title="Facturar">
 														<em class=" fas fa-file-invoice"></em>
 														</a>
 													</th:block>
 
 													<a th:href="@{/editar(id=${clientes.id})}" class="btn btn-warning btn btn-rounded btn-icon 
-														data-toggle=" tooltip" data-placement="center" title="Editar cliente"">
+														data-toggle=" title="Editar cliente">
 														<em class=" fas fa-user-edit"></em></a>
 
 													<th:block
 														th:if="${clientes.estado == T(org.wispcrm.modelo.EstadoCliente).ACTIVO || clientes.estado == T(org.wispcrm.modelo.EstadoCliente).SUSPENDIDO}">
 														<a th:onclick="eliminarCliente([[${clientes.id}]])" class="btn btn-danger btn-rounded btn-icon
-														data-toggle=" tooltip" data-placement="center" title="Eliminar cliente"">
+														data-toggle=" title="Eliminar cliente">
 														<em class=" fas fa-user-minus"></em>
 														</a>
 													</th:block>
@@ -150,13 +150,13 @@
 													<th:block
 														th:if="${clientes.estado == T(org.wispcrm.modelo.EstadoCliente).INACTIVO}">
 														<a th:onclick="reactivarCliente([[${clientes.id}]])" class="btn btn-success btn-rounded btn-icon
-														data-toggle=" tooltip" data-placement="center" title="Reactivar cliente"">
+														data-toggle=" title="Reactivar cliente">
 														<em class=" fas fa-user-plus"></em>
 														</a>
 													</th:block>
 
 													<a th:href="@{/orden(clienteID=${clientes.id})}" class="btn btn-primary btn-rounded btn-icon  
-														data-toggle=" tooltip" data-placement="center" title="Orden de Trabajo"">
+														data-toggle=" title="Orden de Trabajo">
 													<em class=" fas fa-briefcase"></em>
 													</a>
 												</td>
