--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -7,8 +7,7 @@
 <h2>Formulario de subida de imagen</h2>
 
 <!-- Formulario -->
-<form method="post" enctype="multipart/form-data" th:action="@{/upload}">
-    <input type="file" name="file" required/>
+<form method="post" th:action="@{/send-message}">
     <button type="submit">Subir</button>
 </form>
 
