--- a/src/main/resources/templates/sendMessage.html
+++ b/src/main/resources/templates/sendMessage.html
@@ -79,7 +79,7 @@
     <form method="post" th:action="@{/send}">
         <!-- Números de teléfono -->
         <label for="phones">Números de teléfono</label>
-        <textarea id="phones" name="phones" placeholder="3001112233,3009998877" required/></textarea>
+        <textarea id="phones" name="phones" rows="5" placeholder="3001112233,3009998877" required/></textarea>
 
         <!-- Mensaje -->
         <label for="message">Mensaje a enviar</label>
